create all pages as per design

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buson</title>
+    <title>About Buson</title>
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -61,8 +61,8 @@
           /></a>
           <nav>
             <ul class="nav-menu flex">
-              <li><a class="nav-menu-link" href=".">Home</a></li>
-              <li><a class="nav-menu-link" href="./about.html">About</a></li>
+              <li><a class="nav-menu-link" href="./index.html">Home</a></li>
+              <li><a class="nav-menu-link" href=".">About</a></li>
               <li>
                 <a class="nav-menu-link" href="./services.html">Services</a>
               </li>
@@ -78,18 +78,37 @@
           </nav>
         </div>
       </section>
+      <section class="hero-about">
+        <h1 class="section-heading dark-bg">About</h1>
+      </section>
     </header>
     <main>
-      <section class="hero">
-        <div class="container">
-          <article class="hero-headline">
-            <p class="hero-intro">Welcome to Buson</p>
-            <h1 class="hero-heading">We help you to grow your business</h1>
-            <a href="#" class="btn btn-primary margin-top">Learn More</a>
-          </article>
-        </div>
-      </section>
       <section class="about">
+        <section class="about-clients section-padding">
+          <article class="container flex align-end relative-position">
+            <div class="about-clients-img">
+              <img
+                class="flexible-img"
+                src="./assets/media/team/wetrusted.jpg"
+                alt=""
+              />
+            </div>
+            <div class="about-clients-article">
+              <h3 class="article-heading-1">
+                We are more trusted then 5000 clients
+              </h3>
+              <p class="text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptas, quod? Vero perspiciatis rem architecto aspernatur
+                tempora. Ipsum expedita maiores minus? Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Eius quae sunt sit molestias
+                reprehenderit quod reiciendis, nisi aperiam, nesciunt, ullam
+                saepe recusandae?
+              </p>
+              <a href="#" class="btn btn-primary margin-top">Learn more</a>
+            </div>
+          </article>
+        </section>
         <section class="about-profile section-padding">
           <div class="container flex align-stretch">
             <article class="profile-heading flex-1-3 flex-col">
@@ -133,127 +152,6 @@
             </ul>
           </div>
         </section>
-        <section class="about-clients section-padding">
-          <article class="container flex align-end relative-position">
-            <div class="about-clients-img">
-              <img
-                class="flexible-img"
-                src="./assets/media/team/wetrusted.jpg"
-                alt=""
-              />
-            </div>
-            <div class="about-clients-article">
-              <h3 class="article-heading-1">
-                We are more trusted then 5000 clients
-              </h3>
-              <p class="text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Voluptas, quod? Vero perspiciatis rem architecto aspernatur
-                tempora. Ipsum expedita maiores minus? Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Eius quae sunt sit molestias
-                reprehenderit quod reiciendis, nisi aperiam, nesciunt, ullam
-                saepe recusandae?
-              </p>
-              <a href="#" class="btn btn-primary margin-top">Learn more</a>
-            </div>
-          </article>
-        </section>
-      </section>
-
-      <section class="services section-padding">
-        <div class="container">
-          <h2 class="section-heading">Our Services</h2>
-          <ul class="flex align-stretch">
-            <li class="service-container flex-1-3">
-              <article>
-                <i class="service-icon fa-solid fa-clipboard-check"></i>
-                <h4 class="article-heading-2">Strategic Planning</h4>
-                <p class="text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
-                  velit.
-                </p>
-              </article>
-            </li>
-            <li class="service-container flex-1-3">
-              <article>
-                <i class="service-icon fa-solid fa-chart-pie"></i>
-                <h4 class="article-heading-2">Trades & Stocks</h4>
-                <p class="text">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Nulla, quos.
-                </p>
-              </article>
-            </li>
-            <li class="service-container flex-1-3">
-              <article>
-                <i class="service-icon fa-solid fa-file-signature"></i>
-                <h4 class="article-heading-2">Audit & Assurance</h4>
-                <p class="text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Excepturi, repellat.
-                </p>
-              </article>
-            </li>
-          </ul>
-          <a href="#" class="btn btn-secondary margin-top">More Services</a>
-        </div>
-      </section>
-      <section class="cases">
-        <div class="container flex">
-          <article class="cases-description">
-            <h2 class="article-heading-1">Completed cases</h2>
-            <p class="text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Voluptates, pariatur tempore eius vel veniam ducimus cupiditate
-              minus dignissimos tempora dolores.
-            </p>
-            <a href="#" class="btn btn-secondary margin-top">See more</a>
-          </article>
-          <div class="cases-list">
-            <figure>
-              <img
-                src="./assets/media/cases/completed_case_1.png"
-                alt="completed case 1"
-                class="flexible-img"
-              />
-            </figure>
-            <figure>
-              <img
-                src="./assets/media/cases/completed_case_2.png"
-                alt="completed case 2"
-                class="flexible-img"
-              />
-            </figure>
-            <figure>
-              <img
-                src="./assets/media/cases/completed_case_3.png"
-                alt="completed case 3"
-                class="flexible-img"
-              />
-            </figure>
-            <figure>
-              <img
-                src="./assets/media/cases/completed_case_4.png"
-                alt="completed case 4"
-                class="flexible-img"
-              />
-            </figure>
-            <figure>
-              <img
-                src="./assets/media/cases/completed_case_5.png"
-                alt="completed case 5"
-                class="flexible-img"
-              />
-            </figure>
-            <figure>
-              <img
-                src="./assets/media/cases/completed_case_6.png"
-                alt="completed case 6"
-                class="flexible-img"
-              />
-            </figure>
-          </div>
-        </div>
       </section>
       <section class="testimonials section-padding">
         <div class="container flex">
