--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buson</title>
+    <title>Services-Buson</title>
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -61,8 +61,8 @@
           /></a>
           <nav>
             <ul class="nav-menu flex">
-              <li><a class="nav-menu-link" href=".">Home</a></li>
-              <li><a class="nav-menu-link" href="./about.html">About</a></li>
+              <li><a class="nav-menu-link" href="./index.html">Home</a></li>
+              <li><a class="nav-menu-link" href=".">About</a></li>
               <li>
                 <a class="nav-menu-link" href="./services.html">Services</a>
               </li>
@@ -78,88 +78,11 @@
           </nav>
         </div>
       </section>
+      <section class="hero-services">
+        <h1 class="section-heading dark-bg">Our Services</h1>
+      </section>
     </header>
-    <main>
-      <section class="hero">
-        <div class="container">
-          <article class="hero-headline">
-            <p class="hero-intro">Welcome to Buson</p>
-            <h1 class="hero-heading">We help you to grow your business</h1>
-            <a href="#" class="btn btn-primary margin-top">Learn More</a>
-          </article>
-        </div>
-      </section>
-      <section class="about">
-        <section class="about-profile section-padding">
-          <div class="container flex align-stretch">
-            <article class="profile-heading flex-1-3 flex-col">
-              <h3 class="article-heading-1">What we do for you</h3>
-              <hr class="divider-accent" />
-              <p class="text">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
-                temporibus in illo.
-              </p>
-              <a href="#" class="btn btn-tertiary">View profile&raquo;</a>
-            </article>
-            <ul class="flex profile-skills flex-2-3">
-              <li class="flex-1-2">
-                <article class="flex-col">
-                  <h4 class="article-heading-2">Business Planning</h4>
-                  <p class="text">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Praesentium, pariatur?
-                  </p>
-                  <img
-                    class="flexible-img profile-skill-img"
-                    src="./assets/media/team/team_1.jpg"
-                    alt=""
-                  />
-                </article>
-              </li>
-              <li class="flex-1-2">
-                <article class="flex-col">
-                  <h4 class="article-heading-2">Financial Projections</h4>
-                  <p class="text">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Praesentium, pariatur?
-                  </p>
-                  <img
-                    class="flexible-img profile-skill-img"
-                    src="./assets/media/team/team_2.jpg"
-                    alt=""
-                  />
-                </article>
-              </li>
-            </ul>
-          </div>
-        </section>
-        <section class="about-clients section-padding">
-          <article class="container flex align-end relative-position">
-            <div class="about-clients-img">
-              <img
-                class="flexible-img"
-                src="./assets/media/team/wetrusted.jpg"
-                alt=""
-              />
-            </div>
-            <div class="about-clients-article">
-              <h3 class="article-heading-1">
-                We are more trusted then 5000 clients
-              </h3>
-              <p class="text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Voluptas, quod? Vero perspiciatis rem architecto aspernatur
-                tempora. Ipsum expedita maiores minus? Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Eius quae sunt sit molestias
-                reprehenderit quod reiciendis, nisi aperiam, nesciunt, ullam
-                saepe recusandae?
-              </p>
-              <a href="#" class="btn btn-primary margin-top">Learn more</a>
-            </div>
-          </article>
-        </section>
-      </section>
-
+    <main class="services-main">
       <section class="services section-padding">
         <div class="container">
           <h2 class="section-heading">Our Services</h2>
@@ -196,94 +119,6 @@
             </li>
           </ul>
           <a href="#" class="btn btn-secondary margin-top">More Services</a>
-        </div>
-      </section>
-      <section class="cases">
-        <div class="container flex">
-          <article class="cases-description">
-            <h2 class="article-heading-1">Completed cases</h2>
-            <p class="text">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Voluptates, pariatur tempore eius vel veniam ducimus cupiditate
-              minus dignissimos tempora dolores.
-            </p>
-            <a href="#" class="btn btn-secondary margin-top">See more</a>
-          </article>
-          <div class="cases-list">
-            <figure>
-              <img
-                src="./assets/media/cases/completed_case_1.png"
-                alt="completed case 1"
-                class="flexible-img"
-              />
-            </figure>
-            <figure>
-              <img
-                src="./assets/media/cases/completed_case_2.png"
-                alt="completed case 2"
-                class="flexible-img"
-              />
-            </figure>
-            <figure>
-              <img
-                src="./assets/media/cases/completed_case_3.png"
-                alt="completed case 3"
-                class="flexible-img"
-              />
-            </figure>
-            <figure>
-              <img
-                src="./assets/media/cases/completed_case_4.png"
-                alt="completed case 4"
-                class="flexible-img"
-              />
-            </figure>
-            <figure>
-              <img
-                src="./assets/media/cases/completed_case_5.png"
-                alt="completed case 5"
-                class="flexible-img"
-              />
-            </figure>
-            <figure>
-              <img
-                src="./assets/media/cases/completed_case_6.png"
-                alt="completed case 6"
-                class="flexible-img"
-              />
-            </figure>
-          </div>
-        </div>
-      </section>
-      <section class="testimonials section-padding">
-        <div class="container flex">
-          <a href="#"><i class="fa-solid fa-chevron-left object-color"></i></a>
-          <ul class="testimonial-list">
-            <li class="testimonial">
-              <article>
-                <img
-                  src="./assets/media/testimonial/Homepage_testi.png"
-                  alt="testimonial 1"
-                />
-                <p class="article-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Corrupti nemo reprehenderit nisi tempora harum.
-                </p>
-                <div>
-                  <i class="fa-solid fa-star rated"></i>
-                  <i class="fa-solid fa-star rated"></i>
-                  <i class="fa-solid fa-star rated"></i>
-                  <i class="fa-solid fa-star rated"></i>
-                  <i class="fa-solid fa-star rated"></i>
-                </div>
-                <p class="text">
-                  <span class="article-detail">Clifford Frazier - </span
-                  >Colorlib Themes
-                </p>
-              </article>
-            </li>
-          </ul>
-          <a href="#"><i class="fa-solid fa-chevron-right object-color"></i></a>
         </div>
       </section>
       <section class="news section-padding">
