--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                 <a class="nav-menu-link" href="./services.html">Services</a>
               </li>
               <li><a class="nav-menu-link" href="./cases.html">Cases</a></li>
-              <li><a class="nav-menu-link" href="/blog.html">Blog</a></li>
+              <li><a class="nav-menu-link" href="./blog.html">Blog</a></li>
               <li>
                 <a class="nav-menu-link" href="./contact.html">Contact</a>
               </li>
@@ -82,7 +82,7 @@
         <h1 class="section-heading dark-bg">About</h1>
       </section>
     </header>
-    <main>
+    <main class="about-main">
       <section class="about">
         <section class="about-clients section-padding">
           <article class="container flex align-end relative-position">
