--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <a class="nav-menu-link" href="./services.html">Services</a>
               </li>
               <li><a class="nav-menu-link" href="./cases.html">Cases</a></li>
-              <li><a class="nav-menu-link" href="/blog.html">Blog</a></li>
+              <li><a class="nav-menu-link" href="./blog.html">Blog</a></li>
               <li>
                 <a class="nav-menu-link" href="./contact.html">Contact</a>
               </li>
